[project]
name = "text2speech"
description = "A ComfyUI custom node for text-to-speech integration with a local TTS server."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["pyttsx3", "flask", "requests", "pydub"]

[project.urls]
Repository = "https://github.com/GeekatplayStudio/ComfyUI-Text2Speech"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/GeekatplayStudio/ComfyUI-Text2Speech/wiki"
"Bug Tracker" = "https://github.com/GeekatplayStudio/ComfyUI-Text2Speech/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Text2Speech"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

